# argonvale-adventures

./: .gitignore
argonvale-backend/: README.md  check_db.py  check_position.py  check_schema.py  check_templates.py  debug_exploration.py  fix_position.py  fix_users_constraint.py  init_db.py  make_admin.py  migrate_oauth.py  migrate_v10.py  migrate_v2.py  migrate_v3.py  migrate_v4.py  migrate_v5.py  migrate_v6.py  migrate_v7.py  migrate_v8.py  migrate_v9.py  migrate_xp.py  package-lock.json  pyproject.toml  seed_special_shops.py  test_ws_combat.py  trigger_restock.py  verify_encounter_hydration.py  verify_failure.py  verify_pvp.py  verify_tiled_backend.py
argonvale-backend/app/: main.py
argonvale-backend/app/api/: admin.py  battles.py  companions.py  equipment.py  friends.py  management.py  messages.py  profiles.py  shop.py  trades.py
argonvale-backend/app/auth/: router.py  security.py
argonvale-backend/app/core/: logging.py
argonvale-backend/app/data/: creatures.json
argonvale-backend/app/db/: session.py
argonvale-backend/app/models/: __init__.py  companion.py  economy.py  item.py  social.py  user.py
argonvale-backend/app/processors/: tiled_exploration.py
argonvale-backend/app/schemas/: companion.py  user.py
argonvale-backend/app/services/: practice_service.py  restock_service.py
argonvale-backend/app/websocket/: router.py
argonvale-backend/pspf/events/: base.py  combat.py  companion.py  movement.py  registry.py  (+1 more)
argonvale-backend/scripts/: seed_items.py
argonvale-backend/tests/: check_pspf.py  test_combat.py  test_complex_combat.py  test_ws.py
(+69 files in other folders)
